@@ -72,8 +72,6 @@ void CASyncDirectSound::DoWork()
     m_pCallback->OnAudioData(m_VisBuffer, m_VisBytes);
     m_VisBytes = 0;
   }
-
-  g_application.m_CdgParser.ProcessVoice(); // Karaoke patch (114097)
 }
 
 //////////////////////////////////////////////////////////////////////
@@ -253,20 +251,6 @@ CASyncDirectSound::CASyncDirectSound(IAudioCallback* pCallback, int iChannels, u
   {
     m_Resampler.InitConverter(uiSamplesPerSec, uiBitsPerSample, iChannels, 48000, 16, m_dwPacketSize);
   }
-
-  // Karaoke patch (114097) ...
-  if ( g_guiSettings.GetBool("Karaoke.VoiceEnabled") )
-  {
-    CDG_VOICE_MANAGER_CONFIG VoiceConfig;
-    VoiceConfig.dwVoicePacketTime = 20;       // 20ms
-    VoiceConfig.dwMaxStoredPackets = 5;
-    VoiceConfig.pDSound = m_pDSound;
-    VoiceConfig.pCallbackContext = this;
-    VoiceConfig.pfnVoiceDeviceCallback = NULL;
-    VoiceConfig.pfnVoiceDataCallback = CdgVoiceDataCallback;
-    g_application.m_CdgParser.StartVoice(&VoiceConfig);
-  }
-  // ... Karaoke patch (114097)
 }
 
 //***********************************************************************************************
@@ -281,8 +265,6 @@ CASyncDirectSound::~CASyncDirectSound()
 HRESULT CASyncDirectSound::Deinitialize()
 {
   OutputDebugString("CASyncDirectSound::Deinitialize\n");
-
-  g_application.m_CdgParser.FreeVoice(); // Karaoke patch (114097)
 
   m_bIsAllocated = false;
   if (m_pStream)
@@ -734,12 +716,4 @@ void CASyncDirectSound::SwitchChannels(int iAudioStream, bool bAudioOnAllSpeaker
   for (DWORD i = 0; i < dsmb.dwMixBinCount;i++)
     m_pDSound->SetMixBinHeadroom(i, DWORD(g_guiSettings.GetInt("AudioOutput.Headroom") / 6));
   m_iCurrentAudioStream = iAudioStream;
-}
-
-// Voice Manager Callback (Karaoke patch (114097))
-void CASyncDirectSound::CdgVoiceDataCallback( DWORD dwPort, DWORD dwSize, VOID* pvData, VOID* pContext )
-{
-  CASyncDirectSound* pThis = (CASyncDirectSound*) pContext;
-  if (pThis->m_pCallback)
-    pThis->m_pCallback->OnAudioData( (unsigned char*) pvData , dwSize );
 }
